--- a/vignettes/LFDR.Rmd
+++ b/vignettes/LFDR.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Local False Discovery Rate"
 author: "Zachary McCaw"
-date: "Updated:01/04/2018"
+date: "Updated: 01/04/2018"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{LFDR}
@@ -112,7 +112,7 @@ cat("\n");
 
 #### Estimate Empirical Null
 
-Parameters for an empirical null distribution $f_{0} = N(\mu_{0},\sigma_{0}^{2})$, and the null proportion $\pi_{0}$, are estimated either by central matching `CM` or maximum likelihood `ML`. In either case, the limits of a *null neighborhood* $\mathcal{N}_{0} = [a,b]$, in which the alternative density $f_{1}$ is taken as having no support, are specified. The null parameters $(\mu_{0},\sigma_{0}^{2})$ are estimated using the $z$ scores falling in $\mathcal{N}_{0}$. In central matching, $\mathcal{N}_{0}$ is partitioned as $a = \xi_{0} < \cdots < \xi_{K} = b$. The log mixture density at the evaluation points $\ln\hat{f}(\xi_{k})$ is regressed on a quadratic function of the evaluation points $\beta_{0} + \beta_{1}\xi_{k} + \beta_{2}\xi_{k}^{2}$. The parameters of interest $(\mu_{0},\sigma_{0}^{2},\pi_{0})$ are functions of $(\beta_{0},\beta_{1},\beta_{2})$. In maximum likelihood, $(\mu_{0},\sigma_{0}^{2})$ are estimated by fitting a truncated normal distribution to $\mathcal{N}_{0}$. The null proportion is obtained from $(\mu_{0},\sigma_{0}^{2})$ and the proportion of $z$ scores falling in $\mathcal{N}_{0}$. 
+Parameters for an empirical null distribution $f_{0} = N(\mu_{0},\sigma_{0}^{2})$, and the null proportion $\pi_{0}$, are estimated either by central matching `CM` or maximum likelihood `ML`. In either case, the limits of a null neighborhood $\mathcal{N}_{0} = [a,b]$, in which the alternative density $f_{1}$ is taken as having no support, are specified. The null parameters $(\mu_{0},\sigma_{0}^{2})$ are estimated using the $z$ scores falling in $\mathcal{N}_{0}$. In central matching, $\mathcal{N}_{0}$ is partitioned as $a = \xi_{0} < \cdots < \xi_{K} = b$. The log mixture density at the evaluation points $\ln\hat{f}(\xi_{k})$ is regressed on a quadratic function of the evaluation points $\beta_{0} + \beta_{1}\xi_{k} + \beta_{2}\xi_{k}^{2}$. The parameters of interest $(\mu_{0},\sigma_{0}^{2},\pi_{0})$ are functions of $(\beta_{0},\beta_{1},\beta_{2})$. In maximum likelihood, $(\mu_{0},\sigma_{0}^{2})$ are estimated by fitting a truncated normal distribution to $\mathcal{N}_{0}$. The null proportion is obtained from $(\mu_{0},\sigma_{0}^{2})$ and the proportion of $z$ scores falling in $\mathcal{N}_{0}$. 
 
 ```{r}
 # Estimation by central matching
